--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ PyPDF2==3.0.1
 sentence-transformers==2.2.2
 faiss-cpu==1.7.4
 numpy==1.24.3
-torch==2.1.0
 google-generativeai==0.3.0
 aiofiles==23.2.1
 python-dotenv==1.0.0
 loguru==0.7.2
+huggingface_hub>=0.15.1
+transformers>=4.21.0
+torch>=1.9.0
