--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,14 @@ google-generativeai==0.3.0
 aiofiles==23.2.1
 python-dotenv==1.0.0
 loguru==0.7.2
-huggingface_hub>=0.15.1
-transformers>=4.21.0
+
+
 torch>=1.9.0
+
+
+
+
+huggingface_hub==0.14.1
+transformers==4.21.0
+torch==1.12.1
+tokenizers==0.12.1
