--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,12 @@ services:
   - type: web
     name: my-app
     env: python
+    runtime: python-3.11
     buildCommand: |
       pip install --upgrade pip
-      pip cache purge
-      pip install --no-cache-dir --force-reinstall huggingface_hub==0.14.1
-      pip install --no-cache-dir --force-reinstall sentence-transformers==2.2.2
+      pip cache purge  
+      pip install --no-cache-dir torch==1.13.1
+      pip install --no-cache-dir huggingface_hub==0.14.1
+      pip install --no-cache-dir sentence-transformers==2.2.2
       pip install --no-cache-dir -r requirements.txt
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port 10000
