--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,11 @@ services:
     env: python
     runtime: python-3.11
     buildCommand: |
-      pip install --upgrade pip
-      pip cache purge  
+      pip install --upgrade pip setuptools wheel
+      pip cache purge
       pip install --no-cache-dir torch==1.13.1
+      pip install --no-cache-dir tokenizers==0.12.1
+      pip install --no-cache-dir transformers==4.21.0
       pip install --no-cache-dir huggingface_hub==0.14.1
       pip install --no-cache-dir sentence-transformers==2.2.2
       pip install --no-cache-dir -r requirements.txt
