--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-fastapi==0.109.2
-uvicorn[standard]==0.27.1
-python-multipart==0.0.9
-pydantic==2.6.4
-pydantic-settings==2.2.1
-PyPDF2==3.0.1
+fastapi
+uvicorn[standard]
+python-multipart
+pydantic
+pydantic-settings
+PyPDF2
 sentence-transformers==2.2.2
-faiss-cpu==1.8.0
-numpy==1.24.4
-google-generativeai==0.4.1
-aiofiles==23.2.1
-python-dotenv==1.0.1
-loguru==0.7.2
+faiss-cpu
+numpy
+google-generativeai
+aiofiles
+python-dotenv
+loguru
 huggingface_hub==0.14.1
-transformers==4.21.0
-torch==1.13.1
-tokenizers==0.12.1
+torch>=1.13.0
+transformers>=4.21.0
