--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-fastapi
-uvicorn[standard]
-python-multipart
-pydantic
-pydantic-settings
-PyPDF2
+fastapi==0.104.1
+uvicorn[standard]==0.24.0  
+python-multipart==0.0.6
+pydantic==2.5.0
+pydantic-settings==2.1.0
+PyPDF2==3.0.1
 sentence-transformers==2.2.2
-faiss-cpu
-numpy
-google-generativeai
-aiofiles
-python-dotenv
-loguru
+faiss-cpu==1.7.4
+numpy==1.24.3
+google-generativeai==0.3.0
+aiofiles==23.2.1
+python-dotenv==1.0.0
+loguru==0.7.2
 huggingface_hub==0.14.1
-torch>=1.13.0
-transformers>=4.21.0
+transformers==4.21.0
+torch==1.13.1
+tokenizers==0.12.1
