deployment chnages for .txt file

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,11 @@ python-multipart==0.0.6
 pydantic==2.5.0
 pydantic-settings==2.1.0
 PyPDF2==3.0.1
-sentence-transformers==2.2.2
 faiss-cpu==1.7.4
 numpy==1.24.3
 google-generativeai==0.3.0
 aiofiles==23.2.1
 python-dotenv==1.0.0
 loguru==0.7.2
-huggingface_hub==0.14.1
-transformers==4.21.0
-torch==1.13.1
-tokenizers==0.12.1
+sentence-transformers==2.2.2
+--no-deps
